--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   </header>
 
   <!-- Hero -->
-  <section id="hero" class="hero">
+  <!-- <section id="hero" class="hero">
     <div class="container">
       <h2>Premium Vegetables · Fresh Fruits · Basmati Rice</h2>
       <p>Supplying the world with farm-fresh produce direct from Gujarat.</p>
       <a href="#products" class="btn">Our Products</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Products -->
   <section id="products" class="products container">
