--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
       <nav>
         <ul class="nav-list">
           <li><a href="#hero">Home</a></li>
-          <li><a href="#products">Products</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#vegetables">Vegetables</a></li>
+          <li><a href="#fruits">Fruits</a></li>
+          <li><a href="#spices">Spices</a></li>
+          <li><a href="#rice">Rice</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <button class="nav-toggle" aria-label="Toggle navigation">☰</button>
@@ -27,38 +29,50 @@
   <!-- Hero -->
   <section id="hero" class="hero">
     <div class="container">
-      <h2>Premium Vegetables · Fresh Fruits · Basmati Rice</h2>
+      <h2>Premium Vegetables · Fresh Fruits · Quality Spices · Basmati Rice</h2>
       <p>Supplying the world with farm-fresh produce direct from Gujarat.</p>
-      <a href="#products" class="btn">Our Products</a>
+      <a href="#vegetables" class="btn">Explore Products</a>
     </div>
   </section>
 
-  <!-- Products -->
-  <section id="products" class="products container">
-    <h2>Our Products</h2>
+  <!-- Vegetables -->
+  <section id="vegetables" class="products container">
+    <h2>Vegetables</h2>
     <div class="grid grid-3">
-      <div class="card">
-        <img src="images/img1.jpg" alt="Vegetables">
-        <h3>Vegetables</h3>
-        <p>Beans, peppers, tomatoes & more. HS: 0709</p>
-      </div>
-      <div class="card">
-        <img src="images/img5.jpg" alt="Fruits">
-        <h3>Fruits</h3>
-        <p>Mangoes, pineapples, bananas. HS: 0804</p>
-      </div>
-      <div class="card">
-        <img src="images/img9.jpg" alt="Basmati Rice">
-        <h3>Basmati Rice</h3>
-        <p>Aged aromatic rice. HS: 1006</p>
-      </div>
+      <div class="card"><img src="images/Bitter_gourd.jpg" alt="Bitter Gourd"><h3>Bitter Gourd</h3></div>
+      <div class="card"><img src="images/Cauliflower.jpg" alt="Cauliflower"><h3>Cauliflower</h3></div>
+      <div class="card"><img src="images/Green_okra.jpg" alt="Green Okra"><h3>Green Okra</h3></div>
+      <div class="card"><img src="images/Sponge_gourd.jpg" alt="Sponge Gourd"><h3>Sponge Gourd</h3></div>
+      <div class="card"><img src="images/Green_chillies.jpg" alt="Green Chillies"><h3>Green Chillies</h3></div>
+      <div class="card"><img src="images/Onion.jpg" alt="Onion"><h3>Onion</h3></div>
+      <div class="card"><img src="images/Potato.jpg" alt="Potato"><h3>Potato</h3></div>
+      <div class="card"><img src="images/Dehydrated_onion.jpg" alt="Dehydrated Onion"><h3>Dehydrated Onion</h3></div>
     </div>
   </section>
 
-  <!-- About -->
-  <section id="about" class="about container">
-    <h2>About Us</h2>
-    <p>Based in Rajkot, we partner with hundreds of farmers across Gujarat, exporting over 1,000 MT/month of top-quality produce to Europe, the Middle East, and Asia.</p>
+  <!-- Fruits -->
+  <section id="fruits" class="products container">
+    <h2>Fruits</h2>
+    <div class="grid grid-3">
+      <div class="card"><img src="images/Grapes.jpg" alt="Grapes"><h3>Grapes</h3></div>
+      <div class="card"><img src="images/Lemons.jpg" alt="Lemons"><h3>Lemons</h3></div>
+    </div>
+  </section>
+
+  <!-- Spices -->
+  <section id="spices" class="products container">
+    <h2>Spices</h2>
+    <div class="grid grid-3">
+      <div class="card"><img src="images/Cumin_seeds.jpg" alt="Cumin Seeds"><h3>Cumin Seeds</h3></div>
+    </div>
+  </section>
+
+  <!-- Rice -->
+  <section id="rice" class="products container">
+    <h2>Rice</h2>
+    <div class="grid grid-3">
+      <div class="card"><img src="images/Rice.jpg" alt="Basmati Rice"><h3>Basmati Rice</h3></div>
+    </div>
   </section>
 
   <!-- Contact/Form -->
