--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <footer class="site-footer">
     <div class="container">
       <p>&copy; 2025 Best Agri Export</p>
-      <p>Email: <a href="mailto:jermingamit9924@gmail.com">thebestagriexport@gmail.com</a> · Phone: +91 9081946112</p>
+      <p>Email: <a href="mailto:thebestagriexport@gmail.com">thebestagriexport@gmail.com</a> · Phone: +91 93281 00532</p>
     </div>
   </footer>
 
